// กำหนดเวอร์ชันของ proto
syntax = "proto3";

// กำหนด package name
package user;

// ประกาศ service สำหรับ gRPC
service UserService {
  // RPC method สำหรับขอข้อมูล user
  rpc GetUser (UserRequest) returns (UserResponse);
}

// message สำหรับ request
message UserRequest {
  int32 id = 1; // user id
}

// message สำหรับ response
message UserResponse {
  int32 id = 1;       // user id
  string name = 2;   // user name
  string email = 3;  // user email
}
